config/sa_dev.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps-dev
