config/sa_prod.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps-prod
